...
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/templateListFragment"
        android:icon="@drawable/ic_fitness"
        android:title="@string/nav_templates" />
    <item
        android:id="@+id/exerciseLibraryFragment"
        android:icon="@drawable/ic_list"
        android:title="@string/nav_library" />
    <item
        android:id="@+id/historyListFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />
...
