<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/screen_margin"
    android:paddingTop="@dimen/space_s">

    <TextView
        android:id="@+id/empty_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_m"
        android:text="@string/editor_empty_exercises"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <Button
        android:id="@+id/button_add"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editor_add_exercises"
        app:icon="@drawable/ic_add" />
</LinearLayout>
